<resources>
    <string name="app_name">MisContactos</string>
    <string name="nombre">Giovanni Rodriguez</string>
    <string name="telefono">3006602553</string>
    <string name="email">giorodriguezg@gmail.com</string>
    <string name="pnombre">nombre</string>
    <string name="ptelefono">telefono</string>
    <string name="pemail">email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plikes">0 likes</string>
</resources>
